--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -70,6 +70,11 @@ header{
 	font-weight: bolder;
 	pointer-events: none;
 	user-select: none;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 	text-shadow: 0 0 5px #2196f3, 0 0 20px #2196f3, 0 0 50px #2196f3, 0 0 150px #2196f3;
 	transition-duration: 1s;
 }
