--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -68,7 +68,7 @@ header{
 	letter-spacing: 3px;
 	padding-right: 20rem;
 	font-weight: bolder;
-	pointer-events: none;
+	cursor: default;
 	text-shadow: 0 0 5px #2196f3, 0 0 20px #2196f3, 0 0 50px #2196f3, 0 0 150px #2196f3;
 	transition-duration: 1s;
 }
