--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -1,19 +1,33 @@
 body{
 	margin:0;
 	padding:0;
-	height: 100vh;
 	background: #052235;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
+	transition: all 1s ease;
 }
 
-a{
-	position: relative;
-	display: block;
+.div1{
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.div2{
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.neon{
+	display: inline-block;
 	padding: 15px 30px;
 	color: #2196f3;
-	height: 100%;
+	height: auto;
 	font-family: montserrat, sans-serif;
 	text-align: center;
 	text-transform: uppercase;
@@ -24,10 +38,30 @@ a{
 	letter-spacing: 2px;
 	
 }
-a:hover{
+.neon:hover{
 	color: #052235;
 	background-color: #2196f3;
 	transition-duration: 0.5s;
 	box-shadow: 0 0 2px #2196f3, 0 0 5px #2196f3, 0 0 7px #2196f3, 0 0 20px #2196f3, 0 0 150px #2196f3;
 	transition-timing-function: ease-in;
+}
+
+.pilot{
+	display: inline-block;
+	padding: 15px 30px;
+	color: coral;
+	height: auto;
+}
+.svgpilot{
+	stroke-dasharray: 20px;
+	stroke-linecap: 30px;
+	transition: all 5s ease;
+}
+.svgpilot:hover{
+	stroke-dasharray: 150px;
+	stroke-linecap: 40px;
+}
+
+.activebg{
+	background-color: #696969;
 }
