--- a/css/pilotstylesheet.css
+++ b/css/pilotstylesheet.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	background-color: #696969;
+	background-color: #474747;
 	color: coral;
 	justify-content: space-around;
 	align-items: center;
@@ -22,6 +22,8 @@ header{
 p{
 	animation: fade 10s ease forwards;
 	width: 100%;
+	font-weight: bold;
+	letter-spacing: 1px;
 	text-align: center;
 }
 span{
@@ -31,10 +33,11 @@ span{
 #rect{
 	animation: fade 5s ease forwards;
 	width: 100%;
-	height: 5px;
+	height: 10px;
 	top: 0;
 }
 #rect path{
+	stroke-linejoin: 50px;
 	animation: strokeanim 20s ease infinite;
 }
 
