--- a/css/pilotstylesheet.css
+++ b/css/pilotstylesheet.css
@@ -3,6 +3,8 @@ body{
 	padding: 0;
 	background-color: #474747;
 	color: coral;
+	display: flex;
+	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
 	font-family: montserrat, sans-serif;
@@ -11,7 +13,7 @@ body{
 header{
 	animation: comein 4s ease forwards;
 	width: 100%;
-	height: 20rem;
+	height: 21rem;
 	justify-content: space-around;
 	align-items: center;
 	text-align: center;
@@ -20,7 +22,7 @@ header{
 	font-weight: bolder;
 }
 p{
-	animation: fade 10s ease forwards;
+	animation: fade 1s ease forwards;
 	width: 100%;
 	font-weight: bold;
 	letter-spacing: 1px;
@@ -30,6 +32,52 @@ span{
 	font-weight: bolder;
 	animation: fade .95s infinite;
 }
+
+div{
+	display: flex;
+	width: 100%;
+	padding: 5;
+	align-items: center;
+	text-align: center;
+	justify-content: space-around;
+	height: 10rem;
+}
+
+.homelink{
+	animation: fade 1s ease forwards;
+	width: 100%;
+	padding: 5;
+	height: 20px;
+	top: 0;
+}
+.home {
+	padding: 5;
+	stroke-dasharray: 20px;
+	stroke-linecap: 20px;
+	transition: all 2s ease-out;
+}
+.home:hover{
+	stroke-dasharray: 90px;
+	stroke-linecap: 40px;
+}
+.aboutlink{
+	animation: fade 1s ease forwards;
+	width: 100%;
+	padding: 5;
+	height: 20px;
+	top: 0;
+}
+.about {
+	padding: 5;
+	stroke-dasharray: 20px;
+	stroke-linecap: 20px;
+	transition: all 2s ease-out;
+}
+.about:hover{
+	stroke-dasharray: 90px;
+	stroke-linecap: 40px;
+}
+
 #rect{
 	animation: fade 5s ease forwards;
 	width: 100%;
