--- a/css/pilotstylesheet.css
+++ b/css/pilotstylesheet.css
@@ -89,6 +89,16 @@ div{
 	animation: strokeanim 10s ease infinite;
 }
 
+#particles-js{
+	width: 100%;
+	height: 20rem;
+	margin-bottom: 5rem;
+	pointer-events: none;
+	box-shadow: inset 0 0 50px #474747;
+	background-color: #474747;
+}
+
+
 @keyframes strokeanim{
 	0%{
 		stroke-dasharray: 85px;
