more animations and content in pilot

--- a/css/pilotstylesheet.css
+++ b/css/pilotstylesheet.css
@@ -9,6 +9,15 @@ body{
 	align-items: center;
 	font-family: montserrat, sans-serif;
 }
+body::-webkit-scrollbar{
+	width: 0.4rem;
+}
+body::-webkit-scrollbar-track{
+	background: #474747;
+}
+body::-webkit-scrollbar-thumb{
+	background: coral;
+}
 
 header{
 	animation: comein 4s ease forwards;
@@ -23,9 +32,10 @@ header{
 }
 p{
 	animation: fade 1s ease forwards;
-	width: 100%;
+	width: 80%;
 	font-weight: bold;
 	letter-spacing: 1px;
+	line-height: 1.5px;
 	text-align: center;
 }
 span{
@@ -41,6 +51,10 @@ div{
 	text-align: center;
 	justify-content: space-around;
 	height: 10rem;
+}
+h3{
+	font-weight: normal;
+	letter-spacing: 1px;
 }
 
 .homelink{
@@ -70,32 +84,79 @@ div{
 .about {
 	padding: 5;
 	stroke-dasharray: 20px;
-	stroke-linecap: 20px;
+	stroke-linecap: 50px;
 	transition: all 2s ease-out;
 }
 .about:hover{
 	stroke-dasharray: 90px;
-	stroke-linecap: 40px;
+	stroke-linecap: 80px;
 }
 
 #rect{
-	animation: fade 5s ease forwards;
+	animation: fade 1s ease forwards;
 	width: 100%;
 	height: auto;
 	top: 0;
 }
 #rect path{
-	stroke-linejoin: 50px;
 	animation: strokeanim 10s ease infinite;
 }
 
 #particles-js{
 	width: 100%;
-	height: 20rem;
+	height: 25rem;
+	margin-top: 30vh;
 	margin-bottom: 5rem;
 	pointer-events: none;
-	box-shadow: inset 0 0 50px #474747;
 	background-color: #474747;
+}
+
+.load{
+	animation: fade 1s ease forwards;
+	width: 100%;
+	height: auto;
+	margin-top: 50vh;
+	margin-bottom: 30vh;
+}
+.loader {
+	stroke-dasharray: 400px;
+	stroke-linecap: 30px;
+	transition: all 10s ease-in-out;
+}
+.loader:hover{
+	stroke-dasharray: 4000px;
+	stroke-linecap: 30px;
+}
+
+.inst{
+	animation: fade 1s ease forwards;
+	height: 50px;
+	width: 100%;
+	margin-top: 30vh;
+	align-items: center;
+	justify-content: center;
+}
+.arrow{
+	animation: strok 2s ease infinite;
+}
+.scrlt{
+	width: auto;
+	margin-right: 10px;
+	font-weight: bold;
+	letter-spacing: 1px;
+	text-align: center;
+}
+@keyframes strok{
+	0%{
+		stroke-dasharray: 100px;
+	}
+	50%
+	{
+		stroke-dasharray: 65px;
+	}
+	100%{
+		stroke-dasharray: 100px;
+	}
 }
 
 
