--- a/css/pilotstylesheet.css
+++ b/css/pilotstylesheet.css
@@ -106,7 +106,7 @@ h3{
 	width: 100%;
 	height: 25rem;
 	margin-top: 30vh;
-	margin-bottom: 5rem;
+	margin-bottom: 20vh;
 	pointer-events: none;
 	background-color: #474747;
 }
