--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -16,11 +16,19 @@ body::-webkit-scrollbar-thumb{
 	width: 60%;
 }
 
+p{
+	font-family: montserrat, sans-serif;
+	letter-spacing: 1px;
+	color: #2196f3;
+	font-weight: bold;
+	text-align: center;
+	margin-right: 20px;
+}
 
 .div1{
 	display: flex;
 	width: 100%;
-	height: 100vh;
+	height: 80vh;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
@@ -30,6 +38,14 @@ body::-webkit-scrollbar-thumb{
 	display: flex;
 	width: 100%;
 	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+.div3{
+	display: flex;
+	width: 100%;
+	height: 20vh;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
@@ -58,6 +74,11 @@ body::-webkit-scrollbar-thumb{
 	transition-timing-function: ease-in;
 }
 
+.scroll{
+	animation: strok 2s ease infinite;
+}
+
+
 .pilot{
 	display: inline-block;
 	padding: 15px 30px;
@@ -83,5 +104,17 @@ body::-webkit-scrollbar-thumb{
 		stroke-dasharray: 0px;
 		stroke-linecap: 30px;
 
+	}
+}
+@keyframes strok{
+	0%{
+		stroke-dasharray: 100px;
+	}
+	50%
+	{
+		stroke-dasharray: 65px;
+	}
+	100%{
+		stroke-dasharray: 100px;
 	}
 }
