--- a/css/pilotstylesheet.css
+++ b/css/pilotstylesheet.css
@@ -1,3 +1,6 @@
+html{
+	scroll-behavior: smooth;
+}
 body{
 	margin: 0;
 	padding: 0;
@@ -59,7 +62,7 @@ h3{
 
 .homelink{
 	animation: fade 1s ease forwards;
-	width: 100%;
+	width: auto;
 	padding: 5;
 	height: 20px;
 	top: 0;
@@ -76,7 +79,7 @@ h3{
 }
 .aboutlink{
 	animation: fade 1s ease forwards;
-	width: 100%;
+	width: auto;
 	padding: 5;
 	height: 20px;
 	top: 0;
