neon made responsive

--- a/neon/css/neonstylesheet.css
+++ b/neon/css/neonstylesheet.css
@@ -53,13 +53,13 @@ body::-webkit-scrollbar-thumb:horizontal:hover{
 /* scorll bars end */
 
 
-header{
+#navheader{
 	margin-top: 0;
 	padding-top: 0;
-	margin-left: 50px;
+	
 	background: #052235;
 	color: #2196f3;
-	width: auto;
+	width: 80%;
 }
 
 .navbar
@@ -71,7 +71,7 @@ header{
 .navname{
 	float: left;
 	letter-spacing: 3px;
-	padding-right: 20rem;
+	
 	font-weight: bolder;
 	cursor: default;
 	text-shadow: 0 0 5px #2196f3, 0 0 20px #2196f3, 0 0 50px #2196f3, 0 0 150px #2196f3;
@@ -109,7 +109,7 @@ nav li {
 	text-align: center;
 	text-transform: uppercase;
 	text-decoration: none;
-	font-size: 24px;
+	font-size: 1rem;
 	transition: 1s;
 	overflow: hidden;
 	letter-spacing: 2px;
@@ -292,6 +292,67 @@ strong{
     -webkit-animation-iteration-count: infinite; 
     opacity: 1;
     transition-duration: 1s;
+}
+.actnav{
+	margin: 0;
+	padding: 0;
+	width: 80%;
+}
+.navbar.activenav
+{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: auto;
+}
+.navbar.activenav.navname{
+	position: relative;
+	width: 100%;
+	letter-spacing: 3px;
+	font-weight: bolder;
+	cursor: default;
+	text-shadow: 0 0 5px #2196f3, 0 0 20px #2196f3, 0 0 50px #2196f3, 0 0 150px #2196f3;
+	transition-duration: 1s;
+}
+.navbar.activenav.navname:hover{
+	-webkit-animation: pulsate 2.5s ease-in-out;
+    -webkit-animation-iteration-count: infinite; 
+    opacity: 1;
+    transition-duration: 1s;
+}
+.navbar.activenav nav{
+	width: 90%;
+	height: auto;
+	position: relative;
+}
+.navbar.activenav nav ul {
+	display: flex;
+	justify-content: space-around;
+	height: auto;
+	list-style: none;
+}
+
+.navbar.activenav nav li {
+	height: auto;
+	display: inline-block;
+}
+
+.navbar.activenav.navlink{
+	position: relative;
+	display: block;
+	padding: 15px 30px;
+	color: #2196f3;
+	height: 100%;
+	text-align: center;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-size: 0.5rem;
+	transition: 1s;
+	overflow: hidden;
+	letter-spacing: 2px;
+	
 }
 
 @keyframes fade{
