activebg3 added in css for index

--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -163,7 +163,9 @@ p{
 .activebg2{
 	background-color: #193b75;
 }
-
+.activebg3{
+	background-color: #4c2a9c;
+}
 @keyframes onclick{
 	to{
 		stroke-dasharray: 0px;
