--- a/empyrean/empyreanstylesheet.css
+++ b/empyrean/empyreanstylesheet.css
@@ -14,6 +14,42 @@ body{
 	justify-content: space-around;
 	overflow-x: hidden;
 }
+body::-webkit-scrollbar{
+	width: 0.2rem;
+}
+body::-webkit-scrollbar-track{
+	background: black;
+}
+body::-webkit-scrollbar-thumb{
+	background: white;
+}
+body::-webkit-scrollbar:horizontal{
+	width: 0.2rem;
+	height: 0.2rem;
+}
+body::-webkit-scrollbar-track:horizontal{
+	background: black;
+}
+body::-webkit-scrollbar-thumb:horizontal{
+	background: white;
+}
+.loader-wrapper{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left:0;
+	display: flex;
+	background: #000;
+	align-items: center;
+	justify-content: space-around;
+}
+.loader{
+	animation: stretchy 0.75s ease infinite;
+	background:white;
+	width: 1rem;
+	height: 0.2rem;
+}
 .main{
 	width: 100%;
 	height: 100vh;
@@ -92,7 +128,7 @@ body{
 	color: white;
 	width: 80%;
 	font-family: "Playfair Display", serif;
-	font-size: 1rem;
+	font-size: 1.15rem;
 	text-align: center;
 	letter-spacing: 0.5rem;
 	text-shadow: -2px 2px 10px #000;
@@ -139,7 +175,17 @@ a{
 		opacity: 1;
 	}
 }
-
+@keyframes stretchy{
+	0%{
+		width: 1rem
+	}
+	50%{
+		width: 2rem;
+	}
+	100%{
+		width: 1rem;
+	}
+}
 @media (max-width: 1080px; max-height: 1920px;) {
     #d1 {
         background: url("./images/l1small.png");
