--- a/empyrean/empyreanstylesheet.css
+++ b/empyrean/empyreanstylesheet.css
@@ -15,7 +15,7 @@ body{
 	overflow-x: hidden;
 }
 body::-webkit-scrollbar{
-	width: 0.2rem;
+	width: 0.15rem;
 }
 body::-webkit-scrollbar-track{
 	background: black;
@@ -24,8 +24,8 @@ body::-webkit-scrollbar-thumb{
 	background: white;
 }
 body::-webkit-scrollbar:horizontal{
-	width: 0.2rem;
-	height: 0.2rem;
+	width: 0.15rem;
+	height: 0.15rem;
 }
 body::-webkit-scrollbar-track:horizontal{
 	background: black;
@@ -98,25 +98,6 @@ body::-webkit-scrollbar-thumb:horizontal{
 	height: 80vh;
 	box-shadow: 0 0 2px #000, 0 0 5px #000, 0 0 20px #000, 0 0 50px #000, 0 0 100px #000;
 }
-.lax.lax1{
-	position: absolute;
-	top:0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-}
-.lax.lax1 #d1{
-	z-index: -1;
-	background: url("./images/l1small.png");
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-.lax.lax1 #d2{
-	z-index:1;
-	background: url("./images/l2small.png");
-	background-size: cover;	
-	background-repeat: no-repeat;
-}
 .lax img{
 	position: relative;
 	z-index: 2;
@@ -131,7 +112,7 @@ body::-webkit-scrollbar-thumb:horizontal{
 	font-size: 1.15rem;
 	text-align: center;
 	letter-spacing: 0.5rem;
-	text-shadow: -2px 2px 10px #000;
+	text-shadow: 1px 1px 1px #000, 2px 2px 5px #000,4px 4px 10px #000;
 }
 .cont{
 	background:black;
@@ -186,7 +167,7 @@ a{
 		width: 1rem;
 	}
 }
-@media (max-height: 2160px) {
+@media (max-width: 500px) {
     #d1 {
         background: url("./images/l1small.png");
 		background-size: cover;
