--- a/breathe/css/breathestylesheet.css
+++ b/breathe/css/breathestylesheet.css
@@ -7,9 +7,51 @@ html{
 }
 body{
 	animation: fade 1s ease;
+	overflow-y: scroll;
 }
 body::-webkit-scrollbar{
 	width: 0;
+}
+.scroll{
+	overflow-y: hidden;
+}
+.loader-wrapper{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #38AEAD;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+.loader{
+	display: flex;
+	width: auto;
+	height: auto;
+	background: #38AEAD;
+}
+.obj{
+	width: 0.2rem;
+	height: 1rem;
+	margin-right: 0.3rem;
+	background:white;
+}
+.obj:nth-child(1){
+	animation: bounce 0.5s ease-in-out infinite 0s;
+}
+.obj:nth-child(2){
+	animation: bounce 0.5s ease-in-out infinite 0.15s;	
+}
+.obj:nth-child(3){
+	animation: bounce 0.5s ease-in-out infinite 0.3s;
+}
+.obj:nth-child(4){
+	animation: bounce 0.5s ease-in-out infinite 0.45s;
+}
+.obj:nth-child(5){
+	animation: bounce 0.5s ease-in-out infinite 0.6s;
 }
 .main{
 	min-width: 100%;
@@ -35,7 +77,7 @@ body::-webkit-scrollbar{
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	box-shadow: 0 0 5px #FFF, 0 0 20px #696969, 0 0 50px #474747, 0 0 150px #363636;
+	box-shadow: 0 0 2px #474747,0 0 5px #474747,0 0 10px #363636, 0 0 20px #363636, 0 0 50px #000, 0 0 150px #000;
 	overflow: hidden;
 }
 .layer2 h1{
@@ -148,4 +190,26 @@ a{
 	to{
 		opacity: 1;
 	}
+}
+@keyframes bounce{
+	0%{
+		height: 1rem;
+		background: white;
+	}	
+	25%{
+		height: 1.25rem;
+		background: coral;
+	}
+	50%{
+		height: 1.5rem;
+		background: #8b44c2;
+	}
+	75%{
+		height: 1.25rem;
+		background: coral;
+	}	
+	100%{
+		height: 1rem;
+		background: white;
+	}	
 }
