--- a/mirage/miragestylesheet.css
+++ b/mirage/miragestylesheet.css
@@ -9,17 +9,17 @@ body{
 }
 .scene{
 	position: absolute;
-	left: 50;
-	top: 50;
-	width: 100vw;
-	height: 100vh;
+	left: 20%;
+	top: 20%;
+	width: 150vw;
+	height: 150vh;
 }
 .layers{
 	position: absolute;
-	left: 60;
-	top: 60;
-	width: 120vw;
-	height: 120vh;
+	left: 40%;
+	top: 20%;
+	width: 125vw;
+	height: 125vh;
 }
 #layer1{
 	background: url(./layers/1.png);
