--- a/mirage/miragestylesheet.css
+++ b/mirage/miragestylesheet.css
@@ -4,19 +4,20 @@
 }
 body{
 	width: 100%;
+	height: 100%;
 	background: black;
 	overflow: hidden;
 }
 .scene{
 	position: absolute;
-	left: 20%;
-	top: 20%;
-	width: 150vw;
-	height: 150vh;
+	left: 50%;
+	top: 50%;
+	width: 125vw;
+	height: 125vh;
 }
 .layers{
 	position: absolute;
-	left: 40%;
+	left: 50%;
 	top: 20%;
 	width: 125vw;
 	height: 125vh;
