--- a/mirage/miragestylesheet.css
+++ b/mirage/miragestylesheet.css
@@ -10,17 +10,17 @@ body{
 }
 .scene{
 	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 125vw;
-	height: 125vh;
+	left: 100;
+	top: 0;
+	width: 100%;
+	height: 100vh;
 }
 .layers{
 	position: absolute;
-	left: 50%;
-	top: 20%;
-	width: 125vw;
-	height: 125vh;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100vh;
 }
 #layer1{
 	background: url(./layers/1.png);
