--- a/mirage/miragestylesheet.css
+++ b/mirage/miragestylesheet.css
@@ -10,7 +10,7 @@ body{
 }
 .scene{
 	position: absolute;
-	left: 100;
+	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100vh;
@@ -21,6 +21,7 @@ body{
 	top: 0;
 	width: 100%;
 	height: 100vh;
+	background-position: 25% 25%;
 }
 #layer1{
 	background: url(./layers/1.png);
