--- a/mirage/miragestylesheet.css
+++ b/mirage/miragestylesheet.css
@@ -9,86 +9,100 @@ body{
 	overflow: hidden;
 }
 .scene{
+	top: 50%;
+	left: 5%;
 	position: absolute;
-	left: 100;
-	top: 0;
-	width: 100%;
-	height: 100vh;
+	width: 110%;
+	height: 110vh;
 }
 .layers{
 	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100vh;
+	top:5%; 
+	left:50%;
+	width: 110%;
+	height: 110vh;
 }
 #layer1{
-	background: url(./layers/1.png);
-	background-size: cover;
+	background: url(./layers/1.png) no-repeat;
+	background-size:cover; 
 	z-index: 12;
 }
 #layer2{
-	background: url(./layers/2.png);
+	background: url(./layers/2.png) no-repeat;
 	background-size: cover;
 	z-index: 11;
 }
 #layer3{
-	background: url(./layers/3.png);
+	background: url(./layers/3.png) no-repeat;
 	background-size: cover;
 	z-index: 10;
 }
 #layer4{
-	background: url(./layers/4.png);
+	background: url(./layers/4.png) no-repeat;
 	background-size: cover;
 	z-index: 9;
 }
 #layer5{
-	background: url(./layers/5.png);
+	background: url(./layers/5.png) no-repeat;
 	background-size: cover;
 	z-index: 8;
 }
 #layer6{
-	background: url(./layers/6.png);
+	background: url(./layers/6.png) no-repeat;
 	background-size: cover;
 	z-index: 7;
 }
 #layer7{
-	background: url(./layers/7.png);
+	background: url(./layers/7.png) no-repeat;
 	background-size: cover;
 	z-index: 6;
 }
 #layer8{
-	background: url(./layers/8.png);
+	background: url(./layers/8.png) no-repeat;
 	background-size: cover;
 	z-index: 5;
 }
 #layer9{
-	background: url(./layers/9.png);
+	background: url(./layers/9.png) no-repeat;
 	background-size: cover;
 	z-index: 4;
 }
 #layer10{
-	background: url(./layers/10.png);
+	background: url(./layers/10.png) no-repeat;
 	background-size: cover;
 	z-index: 3;
 }
 #layer11{
-	background: url(./layers/11.png);
+	background: url(./layers/11.png) no-repeat;
 	background-size: cover;
 	z-index: 2;
 }
 #layer12{
-	background: url(./layers/12.png);
+	background: url(./layers/12.png) no-repeat;
 	background-size: cover;
 	z-index: 1;
 }
 #layer13{
-	background: url(./layers/sun-lite.png);
+	background: url(./layers/sun-lite.png) no-repeat;
 	background-size: cover;
 	z-index:0;
 }
 #layer14{
-	background: url(./layers/sky.png);
+	background: url(./layers/sky.png) no-repeat;
 	background-size: cover;
 	z-index: -1;
+}
+#txtlayer{
+	z-index: 13;
+	font-family: montserrat,sans-serif;
+	overflow:hidden;
+}
+h1{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 3rem;
+	color: #F4A460;
+	letter-spacing: 1rem;
+	text-align: center;
 }
