--- a/mirage/miragestylesheet.css
+++ b/mirage/miragestylesheet.css
@@ -3,8 +3,9 @@
 	padding: 0;
 }
 body{
-	width: 100%;
-	height: 100%;
+	width: 150vw;
+	height: 150vh;
+	transform: translateX(25%);
 	background: black;
 	overflow: hidden;
 }
@@ -21,73 +22,73 @@ body{
 	height: 120vh;
 }
 #layer1{
-	background: url(./layers/1.png) no-repeat;
-	background-size:cover; 
+	background: url(./layers/1.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 12;
 }
 #layer2{
-	background: url(./layers/2.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/2.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 11;
 }
 #layer3{
-	background: url(./layers/3.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/3.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 10;
 }
 #layer4{
-	background: url(./layers/4.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/4.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 9;
 }
 #layer5{
-	background: url(./layers/5.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/5.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 8;
 }
 #layer6{
-	background: url(./layers/6.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/6.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 7;
 }
 #layer7{
-	background: url(./layers/7.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/7.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 6;
 }
 #layer8{
-	background: url(./layers/8.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/8.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 5;
 }
 #layer9{
-	background: url(./layers/9.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/9.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 4;
 }
 #layer10{
-	background: url(./layers/10.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/10.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 3;
 }
 #layer11{
-	background: url(./layers/11.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/11.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 2;
 }
 #layer12{
-	background: url(./layers/12.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/12.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: 1;
 }
 #layer13{
-	background: url(./layers/sun-lite.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/sun-lite.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index:0;
 }
 #layer14{
-	background: url(./layers/sky.png) no-repeat;
-	background-size: cover;
+	background: url(./layers/sky.png) 150% 150% no-repeat;
+	background-position: 50% 50%; 
 	z-index: -1;
 }
 #txtlayer{
