--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -57,7 +57,7 @@ p{
 	display: flex;
 	width: 100%;
 	height: 10vh;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 	text-align: center;
 	color: #2196f3;
