--- a/mirage/miragestylesheet.css
+++ b/mirage/miragestylesheet.css
@@ -186,7 +186,7 @@ a{
 		visibility: visible;
 		position: absolute;
 		top:0;
-		left: 0;
+		left: 20%;
 		width: 100vw;
 		height: 100vh; 
 		transform: translate(20%,-10%);
